# ML_Spaceship

./: .gitignore  Dockerfile  README.md  Spaceship.ipynb  docker-compose.yml  model.py  pyproject.toml
ml_spaceship/: flask_app.py  model.py
