[tool.poetry]
name = "ml_spaceship"
version = "0.1.0"
description = ""
authors = ["Yuriy Eliseev <yurij.eliseev.2004@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fire = "0.5.0"
numpy = "1.26.4"
catboost = "1.2.2"
pandas = "2.2.0"
optuna = "3.5.0"
scikit-learn = "1.2.2"
Flask = "3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
